# mcz-url-shortener

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-03af9127b5c9493c2d1dbcabc0594987a72ae5f8f36afe462efdafc7f3f02133.json  query-075118f5c3c171b3d7b4ec22830ddfb03b75cfa498c97f36761324f31aa86643.json  query-459292ef9799b3cdf7ec2a81e24b8183749bee91f6caf23269ef496732e56fe6.json  query-502144500b58bf31be4c4aff78dc37be964571e9a01b21b4f853e2f98b8d7d30.json  query-561f6a6307b1e028e79c4f5051cd932f6a9441cf587ee56058ae01fe71829323.json  query-5dfe332aa8f26932c9d0ab6d96db99af36b505ab84fa8fcd7f88349b789db532.json  query-67f48a02b9563e197203ad38dd79bcc1017f40db93caf41b48799b7b60e657b5.json  query-762062f0248d2772ea6fab4a616f84abb99692a04efbf8fdee19e07743fb9fe6.json  query-7c334ffde53cad4a599f808cd49485c662a8a5284605f6a2c2b26095cc8374b3.json  query-7fffbcc2a6c5396862f2ec48a9c9e6a90c9a14b1a47647f9fc7e9531645bed59.json  query-d4f3b5ce9d345ae282493450bd39ef0b2c5dbf7e85a19653c90805b52b168c69.json  query-de00d7c873f1d6fe9e02584c5cf232db66491428aef6932b4e2ccc56fdfd380b.json  query-e09faf7218d1333f6c2de800f256d9d7f24fa65a28813da0e26efe04fd4c9697.json  query-ebe0990f681a75263ee35b8ef85bb4f43da7c7da38fc708442ab9aa110a7e878.json
migrations/: 20260109171444_create_api_tokens.sql  20260117081049_domains.sql
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
src/api/: mod.rs  routes.rs
src/api/dto/: clicks.rs  domain.rs  health.rs  mod.rs  pagination.rs  shorten.rs  stats.rs  stats_list.rs
src/api/handlers/: domains.rs  health.rs  mod.rs  redirect.rs  shorten.rs  stats.rs  stats_list.rs
src/api/middleware/: auth.rs  rate_limit.rs  tracing.rs
src/application/services/: auth_service.rs  domain_service.rs  link_service.rs  mod.rs  stats_service.rs
src/domain/: click_event.rs  click_worker.rs  mod.rs
src/domain/entities/: click.rs  domain.rs  link.rs  mod.rs
src/domain/repositories/: domain_repository.rs  link_repository.rs  mod.rs  stats_repository.rs  token_repository.rs
src/dto/: clicks.rs  stats_list.rs
src/handlers/: redirect.rs  shorten.rs  stats.rs  stats_list.rs
src/infrastructure/cache/: mod.rs  null_cache.rs  redis_cache.rs  service.rs
src/infrastructure/persistence/: mod.rs  pg_domain_repository.rs  pg_link_repository.rs  pg_stats_repository.rs  pg_token_repository.rs
src/middleware/: mod.rs
src/middlewares/: auth.rs
src/utils/: code_generator.rs  extract_domain.rs  mod.rs  url_normalizer.rs
src/web/: routes.rs
src/web/handlers/: dashboard.rs  links.rs  login.rs  mod.rs  stats.rs
static/css/: styles.css
static/js/: mcz-shortener.js  shortener.js
(+6 files in other folders)
