[package]
name = "mcz-url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "macros", "tls-rustls", "chrono", "ipnetwork"
]}
url = "2"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
base64 = "0.22.1"
rand_core = "0.9.3"
serde_json = "1.0.149"
tokio-retry = "0.3.0"
metrics = "0.24.3"
axum-auth = "0.8"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1.89"
thiserror = "2.0.17"
dotenvy = "0.15.7"
tower-http = { version = "0.6.8", features = ["trace"] }
validator = { version = "0.20", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
tower_governor = { version = "0.8.0", features = ["axum"] }
governor = "0.10.4"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12"
colored = "3.1.1"