[package]
name = "mcz-url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework и HTTP
axum = "0.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "normalize-path"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
governor = "0.10.4"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3.0"
async-trait = "0.1.89"

# База данных
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "macros", "tls-rustls", "chrono", "ipnetwork"
]}

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"

# Валидация и парсинг
validator = { version = "0.20", features = ["derive"] }
url = "2"
regex = "1.12.2"
lazy_static = "1.5.0"

# Дата и время
chrono = { version = "0.4", features = ["serde"] }

# Криптография и безопасность
axum-auth = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22.1"

# Генерация случайных данных
rand = "0.9.2"
rand_core = "0.9.3"

# Логирование и мониторинг
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.3"

# Обработка ошибок
anyhow = "1.0.100"
thiserror = "2.0.17"

# Конфигурация
dotenvy = "0.15.7"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12"
colored = "3.1.1"

# Шаблоны
askama = "0.15.1"
askama_web = { version = "0.15", features = ["axum-0.8", "tracing-0.1"] }
